--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+out/*
 .idea/workspace.xml
 # Compiled class file
 *.class
@@ -22,3 +23,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+\.idea/uiDesigner\.xml
